--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,20 @@
 apply plugin: "java"
+apply plugin: 'eclipse'
+
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
+
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.1'
+	testCompile "org.junit.jupiter:junit-jupiter-api:5.0.0"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.0.0'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.0.0'
 }
 
-test {
-    useJUnitPlatform()
+sourceSets {
+    main.java.srcDirs += 'src'
+    test.java.srcDirs += 'test'
 }
